--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
-
+body {
+         background-image: url("myBackground.JPG");
+         background-repeat: no-repeat;
+         background-color: rgb(4, 51, 128);
+         background-position: center;
+         background-size: cover;
+        }
+      h1 {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      p {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      #banner {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+      table {
+        cellspacing: 20;
+        margin-left: auto;
+        margin-right: auto;
+        width: 400;
+      }
