--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p {color: rgb(255,255,255);
          margin-left: auto;
          margin-right: auto;
 #nav-table {width: 800px;
-         position: center;
+         align: center;
       }
 #nav-td {width: 200px;
          text-align: center;
