--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {color: rgb(255,255,255);
 p {color: rgb(255,255,255);
          text-align: center;
       }
-#banner {display: block;
+.banner {display: block;
          margin-left: auto;
          margin-right: auto;
 .nav-table {width: 800px;
