--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ p {color: rgb(255,255,255);
 #banner {display: block;
          margin-left: auto;
          margin-right: auto;
-.nav-table {width: 800px;
+#nav-table {width: 800px;
          align: center;
       }
-.nav-td {width: 200px;
+#nav-td {width: 200px;
          text-align: center;
          }
