--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@ body {   background-image: url("myBackground.JPG");
          background-color: rgb(4, 51, 128);
          background-position: center;
          background-size: cover;
-        };
+        }
 h1 {color: rgb(255,255,255);
          text-align: center;
-      };
+      }
 p {color: rgb(255,255,255);
          text-align: center;
-      };
+      }
 #banner {display: block;
          margin-left: auto;
          margin-right: auto;
 #nav-table {width: 800px;
          align: center;
-      };
+      }
 #nav-td {width: 200px;
          text-align: center;
-         };
+         }
