--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p {color: rgb(255,255,255);
 #banner {display: block;
          margin-left: auto;
          margin-right: auto;
-#nav-table {width: 800px;
+.nav-table {width: 800px;
          align: center;
       }
 #nav-td {width: 200px;
