--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ p {color: rgb(255,255,255);
          margin-right: auto;
 }
 .nav-table {width: 800px;
+         margin: auto;
          text-align: center;
       }
 #nav-td {width: 200px;
