--- a/style.css
+++ b/style.css
@@ -3,21 +3,31 @@ body {   background-image: url("myBackground.JPG");
          background-color: rgb(4, 51, 128);
          background-position: center;
          background-size: cover;
-        }
+      }
 h1 {color: rgb(255,255,255);
          text-align: center;
       }
 p {color: rgb(255,255,255);
          text-align: center;
       }
+#dancingheader {text-align: left;
+      }
+#dancingparagraph {color: rgb(255,255,255);
+         text-align: left;
+      }
+#racingheader {text-align: right;
+      }
+#racingparagraph {color: rgb(255,255,255);
+         text-align: right;
+      }
 #banner {display: block;
          margin-left: auto;
          margin-right: auto;
-}
+      }
 .nav-table {width: 800px;
          margin: auto;
          text-align: center;
       }
 #nav-td {width: 200px;
          text-align: center;
-         }
+      }
