--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ p {color: rgb(255,255,255);
 #nav-td {width: 200px;
          text-align: center;
       }
+.js-table {
+         width: 800px;
+         margin: auto;
+         text-align: center;
+      }
