--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ p {color: rgb(255,255,255);
       }
 .js-table {
          width: 800px;
-         margin: auto;
+         margin-left: auto;
+         margin-right: auto;
          text-align: center;
       }
