--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ p {color: rgb(255,255,255);
          margin-right: auto;
          text-align: center;
       }
+#js-td {
+         width: 400px;
+         text-align: center;
+}
