--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {   background-image: url("myBackground.JPG");
 h1 {color: rgb(255,255,255);
          text-align: center;
       }
-p  {color: rgb(255,255,255);
+#mainparagraph  {color: rgb(255,255,255);
          text-align: center;
 }
 #dancingheader {text-align: left;
