--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body {   background-image: url("myBackground.JPG");
 h1 {color: rgb(255,255,255);
          text-align: center;
       }
-#mainparagraph  {color: rgb(255,255,255);
+p  {color: rgb(255,255,255);
+         width: 800px;
+         text-align: center;
+}
+#mainparagraph {color: rgb(255,255,255);
          text-align: center;
 }
 #dancingheader {text-align: left;
