--- a/style.css
+++ b/style.css
@@ -15,11 +15,13 @@ p  {color: rgb(255,255,255);
       }
 #dancingparagraph {color: rgb(255,255,255);
          text-align: left;
+         width: 400px;
       }
 #racingheader {text-align: right;
       }
 #racingparagraph {color: rgb(255,255,255);
          text-align: right;
+         width: 400px;
       }
 #banner {display: block;
          margin-left: auto;
