--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ p  {color: rgb(255,255,255);
          text-align: left;
          width: 400px;
       }
+#followHeader {color: rgb(255,255,255);
+         text-align: left;
+         width: 400px;
+}
+#quizHeader {color: rgb(255,255,255);
+         text-align: right;
+         width: 400px;
+}
 #racingheader {text-align: right;
       }
 #racingparagraph {color: rgb(255,255,255);
