--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ p  {color: rgb(255,255,255);
          text-align: right;
          width: 400px;
 }
+#dryBitmojiHeader {color: rgb(255,255,255);
+         text-align: center;
+         width: 400px;
+}
 #racingheader {text-align: right;
       }
 #racingparagraph {color: rgb(255,255,255);
@@ -50,7 +54,7 @@ p  {color: rgb(255,255,255);
 #nav-td {width: 200px;
          text-align: center;
       }
-.js-table {
+#js-table {
          width: 800px;
          margin-left: auto;
          margin-right: auto;
