--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p  {color: rgb(255,255,255);
 #nav-td {width: 200px;
          text-align: center;
       }
-#js-table {
+.js-table {
          width: 800px;
          margin-left: auto;
          margin-right: auto;
