--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ p  {color: rgb(255,255,255);
          text-align: center;
          width: 400px;
 }
+#objectHeader {color: rgb(255,255,255);
+         text-align: center;
+         width: 400px;
+}
 #racingheader {text-align: right;
       }
 #racingparagraph {color: rgb(255,255,255);
