--- a/style.css
+++ b/style.css
@@ -3,48 +3,66 @@ body {   background-image: url("myBackground.JPG");
          background-color: rgb(4, 51, 128);
          background-position: center;
          background-size: cover;
-      }
-h1 {color: rgb(255,255,255);
+   }
+h1 {
+         color: rgb(255,255,255);
          text-align: center;
-      }
-p  {color: rgb(255,255,255);
+   }
+p  {
+         color: rgb(255,255,255);
          width: 800px;
          text-align: center;
 }
-#dancingheader {text-align: left;
-      }
-#dancingparagraph {color: rgb(255,255,255);
-         text-align: left;
+#dancingheader {
+         color: rgb(255, 255, 255);
+         text-align: center;
          width: 400px;
       }
-#followHeader {color: rgb(255,255,255);
-         text-align: left;
+#dancingparagraph {
+         color: rgb(255,255,255);
+         text-align: center;
+         width: 400px;
+      }
+#followHeader {
+         color: rgb(255,255,255);
+         text-align: center;
          width: 400px;
 }
-#quizHeader {color: rgb(255,255,255);
-         text-align: right;
+#eduAppHeader {
+         color: rgb(255,255,255);
+         text-align: center;
          width: 400px;
 }
-#formattedIntHeader {color: rgb(255,255,255);
-         text-align: right;
+#quizHeader {
+         color: rgb(255,255,255);
+         text-align: center;
+         width: 400px;
+}
+#formattedIntHeader {
+         color: rgb(255,255,255);
+         text-align: center;
          width: 400px;
 }
 #bitmojiLineHeader {color: rgb(255,255,255);
-         text-align: right;
+         text-align: center;
          width: 400px;
 }
 #dryBitmojiHeader {color: rgb(255,255,255);
          text-align: center;
          width: 400px;
 }
-#objectHeader {color: rgb(255,255,255);
+#objectHeader {
+         color: rgb(255,255,255);
          text-align: center;
          width: 400px;
 }
-#racingheader {text-align: right;
+#racingheader {
+         color: rgb(255, 255, 255);
+         text-align: center;
+         width: 400px;
       }
 #racingparagraph {color: rgb(255,255,255);
-         text-align: right;
+         text-align: center;
          width: 400px;
       }
 #banner {display: block;
