--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ p  {
          width: 800px;
          text-align: center;
 }
+script   {
+         margin: auto;
+}
 #dancingheader {
          color: rgb(255, 255, 255);
          text-align: center;
