--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ h1 {
          color: rgb(255,255,255);
          text-align: center;
    }
+h2 {
+         color: rgb(255,255,255);
+         text-align: center;
+   }
 p  {
          color: rgb(255,255,255);
          width: 800px;
